# contextpad

./: .gitignore  CHANGELOG.md  CODEBASE_ANALYSIS.md  CODE_BLOCK_PARAMETERS.md  DEVELOPER_NOTES.md  LICENSE  README.md  USER_GUIDE.md  index.html  package.json  templates_cm6.json
.github/workflows/: android-build.yml  desktop-build.yml
Documentation/: CURRENT_STATE_ANALYSIS.md  FEATURE_ANALYSIS_FILE_HANDLING.md  IMPLEMENTATION_PLAN_FILE_HANDLING.md  IMPLEMENTATION_PLAN_UI_FIXES.md  LIBRARY_TEMPLATES.json  REPORT_DRAG_DROP_IMPLEMENTATION.md  STORE_DOCUMENTATION.md
Documentation/Dev-Docs/: ContextPad_Development_Notes.md  ContextPad_Next_Steps.md
Documentation/Documentation/: ARCHITECTURE_OVERVIEW.md  CORE_LOGIC_DOCUMENTATION.md
Documentations/: CODE_QUALITY_REPORT.md  MODULE_ANALYSIS_ACTION_SYSTEM.md  MODULE_ANALYSIS_EDITOR.md  MODULE_ANALYSIS_INTELLIGENCE.md  MODULE_ANALYSIS_NAVIGATION.md  MODULE_ANALYSIS_SIDEBAR_TOOLS.md  MODULE_ANALYSIS_TEMPLATES_AND_COMMANDS.md  MODULE_ANALYSIS_TOKEN_ESTIMATOR.md
Templates & Actions/: ai_prompts_actions.json  ai_prompts_templates.json  markdown_formatting_guide.md
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: file.rs  mod.rs  secrets.rs  window.rs
src/components/: GlobalErrorHandler.tsx
src/constants/: pinnedTabIcons.ts
src/data/: WELCOME.md  commandRegistry.ts
src/extensions/: actionButtons.ts  codeBlockParams.ts  commandPalette.ts  inlineFormulas.ts  (+4 more)
(+111 files in other folders)
