[package]
name = "contextpad"
version = "1.3.3"
authors = ["entropy_redux"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
keyring = "3.6.3"
