[package]
name = "contextpad"
version = "1.5.0"
authors = ["entropy_redux"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
keyring = "3.6.3"
